# cornerstone

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  pyproject.toml
agent/: __init__.py  report.py  runner.py  tools.py
data/processed/: agent_report.json  combine_athleticism.parquet  dybantsa.csv  dybantsa.parquet  dybantsa_comparables.json  dybantsa_projection.json  nba_skills_2026.parquet  peak_per36.parquet  prospect_features.csv  prospect_features.parquet  prospects.csv  prospects.parquet  realized_outcomes.csv  realized_outcomes.parquet  recruiting.parquet  wizards_fit.json
eval/: __init__.py  backtest.py  backtest_results.json  baseline.py  metrics.py  stacker.py  supervised.py  supervised_results.json  tune_context.py  tuning_results.json
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/public/data/: agent_report.json  backtest_results.json  dybantsa_projection.json  wizards_fit.json
frontend/src/: App.tsx  data.ts  styles.css
frontend/src/components/: Agent.tsx  Bits.tsx  Comparables.tsx  Methodology.tsx  Projection.tsx  (+1 more)
models/: __init__.py  comparables.py  features.py  projection.py  roster_fit.py
pipelines/: __init__.py  build_dataset.py  combine.py  config.py  data_dictionary.md  dybantsa.py  enrich.py  features.py  fetch.py  nba_skills.py  outcomes.py  parse.py  per36.py  recruiting.py
pipelines/sources/: __init__.py  bbref.py
tests/: test_agent.py  test_backtest.py  test_comparables.py  test_dataset.py  test_enrich.py  test_pipeline.py  test_projection.py  test_roster_fit.py
